Too many changes, majorly completed the Contact page for now (it does not include Message system yet.

--- a/src/stylesheets/components/about/_about.scss
+++ b/src/stylesheets/components/about/_about.scss
@@ -1,7 +1,7 @@
 .about {
     & {
         background-color: $about-top-background;
-        // background-color: #eee;
+        min-height: 100vh;
         overflow-x: hidden;
         padding-bottom: 12rem;
         position: relative;
