--- a/src/stylesheets/base/_base.scss
+++ b/src/stylesheets/base/_base.scss
@@ -20,6 +20,8 @@ html {
     box-sizing: border-box;
     -webkit-box-sizing: border-box;
     font-size: 62.5%;
+    max-width: 100vw;
+    overflow-x: hidden;
 }
 
 body {
