--- a/src/stylesheets/components/contact/_contact__blocks__hover-block.scss
+++ b/src/stylesheets/components/contact/_contact__blocks__hover-block.scss
@@ -7,6 +7,7 @@
     }
 
     @include atMedium {
+        background-color: #f1f1f1;
         position: absolute;
         // top: 9rem;
         right: 0;
@@ -200,6 +201,7 @@
         }
 
         @include atMedium {
+            background-color: #f1f1f1;
             margin: 0;
             position: absolute;
         }
