--- a/src/stylesheets/components/landing-page/_landing-page.scss
+++ b/src/stylesheets/components/landing-page/_landing-page.scss
@@ -48,7 +48,8 @@
     }
 
     &__image-behind {
-        background: url("./../public/images/test/sky--clouds.jpg");
+        // background: url("./../public/images/test/sky--clouds.jpg");
+        background: url("./../public/images/clear-sky--3840x2160.jpg");
         background-repeat: no-repeat;
         background-position: center;
         background-size: cover;
