Added background color to the main Landing page image so the image behind it doesn't show up when loading for the first time or resizing browser. Small but effective change.

--- a/src/stylesheets/components/landing-page/_landing-page.scss
+++ b/src/stylesheets/components/landing-page/_landing-page.scss
@@ -10,6 +10,7 @@
     }
 
     &__image {
+        background-color: #f6f6f6;
         background: url("./../public/images/skyline--800x1600.jpg");
         background-repeat: no-repeat;
         background-position: center;
